chore: upgrade to java 6.0.0-rc.1