@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2024 Chewbotcca
+ * Copyright (C) 2025 Chewbotcca
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -150,7 +150,7 @@ public class MemeratorCommand extends SlashCommand {
                         throw new NotFound("");
                     }
 
-                    meme = memes.get(0);
+                    meme = memes.getFirst();
                 } else if (memeResponse instanceof Meme) {
                     meme = (Meme) memeResponse;
                 } else {
